# skeletal-animation

./: .gitignore  .gitmodules  CMakeLists.txt  configure.py  readme.md
engine/include/: camera.h  cg_exception.h  cubemap_texture.h  debug_quad.h  keyboard.h  light_sources.h  mesh.h  model.h  mouse.h  namer.h  shader.h  skybox.h  sprite_model.h  texture_manager.h  utils.h  vertex.h  wall.h  water.h
engine/include/terrain/: perlin_noise.h  simple_square_terrain.h
engine/include/terrian/: perlin_noise.h  simple_terrian.h
engine/src/: camera.cpp  cg_exception.cpp  cubemap_texture.cc  debug_quad.cc  keyboard.cpp  light_sources.cpp  mesh.cpp  model.cpp  mouse.cc  namer.cpp  shader.cpp  skybox.cc  sprite_model.cpp  texture_manager.cpp  utils.cpp  vertex.cpp  wall.cpp  water.cc
engine/src/terrain/: perlin_noise.cc  simple_square_terrain.cc
engine/src/terrian/: perlin_noise.cc  simple_terrian.cc
model-visualizer/src/: main.cc
models/phoenix-bird/shaders/: model.frag
models/phoenix-bird/textures/: Tex_Ride_FengHuang_01a_D_A.tga  Tex_Ride_FengHuang_01a_E.tga  Tex_Ride_FengHuang_01b_D_A.tga
models/sprite/: 020001_LynM_D.tga  53002_LynM_D.tga  LynM_001_D.tga  X_LynF_001_hi_d.psd  model.frag  model.vert  sprite.fbx
resources/phoenix-bird/source/: fly.fbx
resources/phoenix-bird/textures/: Tex_Ride_FengHuang_01b_E.tga
sample-game/include/: tank.h  terrain.h
sample-game/src/: debug_drawer.cc  main.cc  tank.cc
skeletal-animation/include/: mesh.h  shader.h  sprite_model.h  texture_manager.h  utils.h
skeletal-animation/src/: camera.cpp  main.cpp  mesh.cpp  namer.cpp  shader.cpp  sprite_model.cpp  texture_manager.cpp  utils.cpp  wall.cpp
skinned-animation/include/: camera.h  cg_exception.h  keyboard.h  mesh.h  namer.h  sprite_model.h  texture_manager.h  vertex.h
skinned-animation/src/: cg_exception.cpp  main.cpp  mesh.cpp  namer.cpp  shader.cpp  sprite_model.cpp  texture_manager.cpp  vertex.cpp  wall.cpp
targets/model-visualizer/src/: main.cc
targets/sample-game/include/: debug_drawer.h  tank.h
targets/sample-game/src/: terrain.cc
water/src/: main.cc
